log
Tue 21 Mar 2023 09:43:28 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   33 |     List *lista = (List *) malloc(sizeof(List));
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
982dae4
Tue 21 Mar 2023 09:45:45 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
270accb
Tue 21 Mar 2023 09:50:10 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:17: error: statement with no effect [-Werror=unused-value]
   43 |   lista->current->next;
      |   ~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8ef99f9
Tue 21 Mar 2023 09:51:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5861557
Tue 21 Mar 2023 09:55:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e7a17dd
Tue 21 Mar 2023 10:10:32 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f8e89e7
Tue 21 Mar 2023 10:10:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1f0036b
Tue 21 Mar 2023 10:11:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fac107e
Tue 21 Mar 2023 10:11:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4400258
Tue 21 Mar 2023 10:13:42 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
6e4051c
Tue 21 Mar 2023 10:15:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4af68a4
Tue 21 Mar 2023 10:20:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f2104f4
Tue 21 Mar 2023 10:20:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7aac8f7
Tue 21 Mar 2023 10:25:13 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
197275a
Tue 21 Mar 2023 10:25:44 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
5a3d1bf
Wed 22 Mar 2023 12:52:26 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:62:4: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   62 | if(lista == NULL || lista->current == NULL) return NULL;
      |    ^~~~~
      |    list
list.c:62:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
49126b1
